--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,7 +11,9 @@
     "@coral-xyz/anchor": "^0.30.1",
     "bs58": "^5.0.0",
     "fs-extra": "^11.2.0",
-    "dotenv": "16.4.5"
+    "dotenv": "16.4.5",
+    "@solana/spl-token": "^0.4.6",
+    "@solana/spl-token-metadata": "^0.1.4"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
