--- a/packages/protocol-contracts-svm-core/package.json
+++ b/packages/protocol-contracts-svm-core/package.json
@@ -14,20 +14,57 @@
   "license": "MIT",
   "main": "build/index.js",
   "files": [
-    "build"
+    "dist",
+    "src"
   ],
   "types": "./lib/types/index.d.ts",
   "exports": {
-    "./lib/esm/*": "./lib/esm/*",
-    "./lib/cjs/*": "./lib/cjs/*.js",
-    "./lib/types/*": "./lib/types/*"
+    "./lib/esm/*": "./dist/esm/*",
+    "./lib/cjs/*": "./dist/cjs/*.js",
+    "./lib/types/*": "./dist/types/*",
+    "./*": "./dist/*"
   },
   "scripts": {
     "clean": "npx shx mkdir -p lib && npx shx rm -rf lib",
     "package": "npx shx mkdir  -p lib/cjs lib/esm lib/types",
-    "build": "rm -rf ./build && tsc -b ./tsconfig.build.json"
+    "build": "tsc -b ./tsconfig.json"
   },
-  "peerDependencies": {
+  "resolutions": {
+    "libp2p-crypto": "0.21.2"
+  },
+  "dependencies": {
+    "@coral-xyz/anchor": "^0.30.1",
+    "@ledgerhq/hw-app-solana": "^7.2.4",
+    "@ledgerhq/hw-transport-node-hid": "^6.29.5",
+    "@solana/web3.js": "^1.95.3",
+    "async": "^3.2.5",
+    "axios": "^1.6.5",
+    "base32": "^0.0.7",
+    "bn.js": "^5.2.1",
+    "bs58": "^5.0.0cp",
+    "cids": "^1.1.9",
+    "commander": "^12.0.0",
+    "cookies": "^0.9.1",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.4.1",
+    "dotenv-cli": "^7.3.0",
+    "fetch-retry": "^5.0.6",
+    "js-sha256": "^0.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "kubo-rpc-client": "^3.0.2",
+    "spl-token-4": "npm:@solana/spl-token@0.3.11",
+    "tweetnacl": "^1.0.3"
+  },
+  "devDependencies": {
+    "@types/bn.js": "^5.1.5",
+    "autoprefixer": "^10.4.2",
+    "eslint": "8.7.0",
+    "patch-package": "^8.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "5.3.3"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "publishConfig": {
     "registry": "http://nexus.rarible.int/repository/npm/"
