--- a/packages/protocol-contracts-svm-editions-controls/tsconfig.json
+++ b/packages/protocol-contracts-svm-editions-controls/tsconfig.json
@@ -1,4 +1,16 @@
 {
-  "extends": "../../tsconfig.json",
-  "include": ["src/**/*"]
+  "compilerOptions": {
+    "outDir": "dist",
+    "declaration": true,
+    "declarationDir": "dist/types",
+    "rootDir": "src",
+    "moduleResolution": "node",
+    "module": "CommonJS",
+    "resolveJsonModule": true,
+    "target": "ES6",
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
