--- a/packages/protocol-contracts-svm-core/tsconfig.json
+++ b/packages/protocol-contracts-svm-core/tsconfig.json
@@ -1,17 +1,4 @@
 {
   "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "declaration": true,
-    "declarationDir": "dist/types",
-    "rootDir": "src",
-    "moduleResolution": "node",
-    "module": "CommonJS",
-    "resolveJsonModule": true,
-    "target": "ES6",
-    "sourceMap": true,
-    "allowSyntheticDefaultImports": true
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*"]
 }
