--- a/packages/protocol-contracts-svm-editions-controls/package.json
+++ b/packages/protocol-contracts-svm-editions-controls/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "clean": "npx shx mkdir -p lib && npx shx rm -rf lib",
     "package": "npx shx mkdir  -p lib/cjs lib/esm lib/types",
-    "build": "tsc -b ./tsconfig.json"
+    "build": "tsc -b ./tsconfig-build.json"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
