--- a/packages/protocol-contracts-svm-core/tsconfig-build.json
+++ b/packages/protocol-contracts-svm-core/tsconfig-build.json
@@ -5,6 +5,6 @@
     "baseUrl": ".",
     "paths": {}
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/index.ts"],
   "exclude": ["src/**/*.test.ts"]
 }
