--- a/packages/protocol-contracts-svm-marketplace-cli/package.json
+++ b/packages/protocol-contracts-svm-marketplace-cli/package.json
@@ -23,7 +23,7 @@
     "./lib/types/*": "./lib/types/*"
   },
   "scripts": {
-    "clean": "npx shx mkdir -p lib && npx shx rm -rf lib",
+   "clean": "mkdir -p build &&  mkdir -p node_modules && rm -rf build && rm -rf node_modules",
     "package": "npx shx mkdir  -p lib/cjs lib/esm lib/types",
     "build": "pwd"
   },
