--- a/packages/protocol-contracts-svm-editions-controls-cli/package.json
+++ b/packages/protocol-contracts-svm-editions-controls-cli/package.json
@@ -16,14 +16,9 @@
   "files": [
     "build"
   ],
-  "types": "./lib/types/index.d.ts",
-  "exports": {
-    "./lib/esm/*": "./lib/esm/*",
-    "./lib/cjs/*": "./lib/cjs/*.js",
-    "./lib/types/*": "./lib/types/*"
-  },
+  "types": "build/index.d.ts",
   "scripts": {
-    "clean": "npx shx mkdir -p build && npx shx rm -rf build",
+    "clean": "mkdir -p build &&  mkdir -p node_modules && rm -rf build && rm -rf node_modules",
     "build": "tsc -b ./tsconfig-build.json"
   },
   "dependencies": {
